<resources>
    <string name="app_name">CA$H</string>
    <string name="date">Fecha</string>
    <string name="account">Cuenta</string>
    <string name="amount">Monto</string>
    <string name="comments">Comentarios</string>
    <string name="regist">Registrar</string>
    <string name="time">Hora</string>
    <string name="app_subname">by Pato</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="credit_page_title">Entradas</string>
    <string name="balance_page_title">Saldo</string>
    <string name="debit_page_title">Salidas</string>
    <string name="title_activity_referencia">referenciaActivity</string>
</resources>
